Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68449

[regression 5.10.1 -> 5.11.0] Qt application freezing over X11 remote connection

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.11.1
    • 5.11.0
    • QPA: X11/XCB
    • None
    • Linux, CentOS 7.5 32bit build platform. Target platform CentOS 7.5 32bit or 64bit

      I have CentOS 7.5 32bit, and did build Qt from source with this configuration:

      ./configure -opensource -confirm-license -release -shared -nomake examples -nomake tests -no-opengl -skip qtwebengine -skip qtsensors -skip qtmultimedia -skip qtlocation -skip qt3d -skip qtwayland -c++std c++11 -prefix /opt/qt5101

      Built works fine and installs. I can build applications with, they start and run as expected when logged in locally on a Linux PC.

      When connecting with ssh and X11 forwarding like:

      ssh -X myuser@myserver

      The application that I start freezes at startup, at best I get some kind of rectangle on the screen that looks like the shape of a window. However nothing works.

      gdb at this moment prints out:

      #0 0xb7fdb424 in __kernel_vsyscall ()
      #1 0xb6f0d6dc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
      #2 0xb4a5c3d7 in _xcb_conn_wait () from /lib/libxcb.so.1
      #3 0xb4a5e1e8 in wait_for_reply () from /lib/libxcb.so.1
      #4 0xb4a5e34b in xcb_wait_for_reply () from /lib/libxcb.so.1
      #5 0xb4a8987b in xcb_shm_create_segment_reply () from /lib/libxcb-shm.so.0
      #6 0xb4e2d74c in ?? () from /opt/qt5110/plugins/platforms/../../lib/libQt5XcbQpa.so.5
      #7 0xb4e2e864 in ?? () from /opt/qt5110/plugins/platforms/../../lib/libQt5XcbQpa.so.5
      #8 0xb4e2ea2f in ?? () from /opt/qt5110/plugins/platforms/../../lib/libQt5XcbQpa.so.5
      #9 0xb4e30112 in ?? () from /opt/qt5110/plugins/platforms/../../lib/libQt5XcbQpa.so.5
      #10 0xb76e477e in QBackingStore::resize(QSize const&) () from /opt/qt5110/lib/libQt5Gui.so.5
      #11 0xb7aa4149 in ?? () from /opt/qt5110/lib/libQt5Widgets.so.5
      #12 0xb7aa5cb2 in ?? () from /opt/qt5110/lib/libQt5Widgets.so.5
      #13 0xb7ac048a in QWidgetPrivate::syncBackingStore(QRegion const&) () from /opt/qt5110/lib/libQt5Widgets.so.5
      #14 0xb7af4654 in ?? () from /opt/qt5110/lib/libQt5Widgets.so.5
      #15 0xb7af515c in ?? () from /opt/qt5110/lib/libQt5Widgets.so.5
      #16 0xb7a9622c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /opt/qt5110/lib/libQt5Widgets.so.5
      #17 0xb7a9d744 in QApplication::notify(QObject*, QEvent*) () from /opt/qt5110/lib/libQt5Widgets.so.5
      #18 0xb71905e3 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /opt/qt5110/lib/libQt5Core.so.5
      #19 0xb7556528 in QGuiApplicationPrivate::processExposeEvent(QWindowSystemInterfacePrivate::ExposeEvent*) () from /opt/qt5110/lib/libQt5Gui.so.5
      #20 0xb7557268 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /opt/qt5110/lib/libQt5Gui.so.5
      #21 0xb752f843 in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /opt/qt5110/lib/libQt5Gui.so.5
      #22 0xb4eb0b25 in ?? () from /opt/qt5110/plugins/platforms/../../lib/libQt5XcbQpa.so.5
      #23 0xb718e509 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /opt/qt5110/lib/libQt5Core.so.5
      #24 0xb718e964 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /opt/qt5110/lib/libQt5Core.so.5
      #25 0xb7197bd9 in QCoreApplication::exec() () from /opt/qt5110/lib/libQt5Core.so.5
      #26 0xb754bac4 in QGuiApplication::exec() () from /opt/qt5110/lib/libQt5Gui.so.5
      #27 0xb7a96184 in QApplication::exec() () from /opt/qt5110/lib/libQt5Widgets.so.5
      #28 0x0804c1f7 in main ()

      Note:

      • Using an X Server application on Window 7 or 10, to connect to that Linux PC, all works fine
      • Same environment on Linux, however with Qt 5.10.1, all works fine

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            paeglis Gatis Paeglis
            sbielmann Stephan Bielmann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes